# x-agent

./: .env.example  .gitignore  AGENTS.md  Makefile  README.md  pyproject.toml
database/mock_mysql/: 001_schema.sql  002_seed.sql  README.md
docs/: architecture.md  development-workflow.md  service-responsibilities.md
docs/adr/: 0001-layered-service-architecture.md
docs/workflows/: superpowers-integration.md
scripts/: ingest_nl2sql_knowledge.py  init_mock_mysql.sh  start_mysql.sh  start_qdrant.sh
src/x_agent/: __init__.py  main.py
src/x_agent/agent/: nl2sql_agent.py  qwen_agent.py  simple_agent.py
src/x_agent/application/: __init__.py  agent_messages.py  agent_sessions.py  embeddings.py  llm.py  nl2sql.py  nl2sql_knowledge_ingest.py  service_info.py
src/x_agent/core/: __init__.py  config.py  logging.py
src/x_agent/domain/: __init__.py  agent_message.py  agent_session.py  nl2sql.py  service_info.py
src/x_agent/execution/: __init__.py  agent_executor.py
src/x_agent/infrastructure/: composite_sql_knowledge_base.py  in_memory_sql_knowledge_base.py  mysql_metadata_sql_knowledge_base.py  qdrant_sql_knowledge_base.py  qwen_embedding_provider.py  qwen_llm_provider.py  sql_validator.py
src/x_agent/persistence/: __init__.py  in_memory_agent_message_repository.py  in_memory_agent_session_repository.py
tests/unit/: test_main.py
tests/unit/agent/: test_nl2sql_agent.py  test_qwen_agent.py  test_simple_agent.py
web/: index.html  package-lock.json  package.json  tsconfig.node.json  vite.config.ts
web/src/: App.tsx  main.tsx  styles.css
(+25 files in other folders)
